:sparkles: fix: update CORS configuration to use setAllowedOriginPatterns for dynamic origins